<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.xandealm.iwillpay.ui.viewmodel.ExpenseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/common_margin"
        tools:context=".ui.ExpenseFragment">

        <EditText
            android:id="@+id/expense_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/expense_title_hint"
            android:inputType="text"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:text="@{viewModel.title}" />

            <LinearLayout
                android:id="@+id/cost_due_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                app:layout_constraintTop_toBottomOf="@id/expense_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:id="@+id/expense_cost"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/expense_cost_hint"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    app:prefixText="@string/currency_symbol"
                    android:text="@{viewModel.cost}" />

                <EditText
                    android:id="@+id/expense_due_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/expense_due_date_hint"
                    android:inputType="date"
                    android:text="@{viewModel.dueDate}"/>

            </LinearLayout>

            <EditText
                android:id="@+id/expense_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin"
                android:hint="@string/expense_description_hint"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@id/cost_due_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@{viewModel.description}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>